[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/GFX/track.png" type="Texture" id=1]
[ext_resource path="res://Sences/Snake.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://Sences/Enviroments/ObsticalSpawnner.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sences/Enviroments/EnergySpawnner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sences/Enviroments/HUD.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sences/Enviroments/FinisherSpawnner.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/SFX/Music.wav" type="AudioStream" id=8]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Start"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Track:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, -85 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16.9221, 478.566 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 198.552, 10 )

[sub_resource type="AnimatedTexture" id=4]

[sub_resource type="AnimatedTexture" id=5]

[sub_resource type="Environment" id=6]
background_mode = 4
glow_enabled = true
glow_blend_mode = 1

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="Track" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 1 )

[node name="FinisherSpawnner" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 1200 )

[node name="ObsticalSpawnner" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 1113.48 )

[node name="EnergySpawnner" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 1189.81 )

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( 7.56534, 482.673 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2( 349.284, 480.003 )
shape = SubResource( 2 )

[node name="Snake" parent="." instance=ExtResource( 2 )]
position = Vector2( 203.259, 142.715 )

[node name="EndLine" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLine"]
position = Vector2( 175.129, -32.128 )
shape = SubResource( 3 )

[node name="Left" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -3.60522, 1.90953 )
scale = Vector2( 179.624, 861.101 )
normal = SubResource( 4 )
action = "Left"

[node name="Right" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 188.574, 3.36739 )
scale = Vector2( 170.245, 832.992 )
normal = SubResource( 5 )
action = "Right"

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="BackGroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="AdMob" type="Node" parent="."]
script = ExtResource( 9 )
is_real = true
banner_id = "ca-app-pub-3789667585950608/5405300928"
interstitial_id = "ca-app-pub-3789667585950608/5949894700"
rewarded_id = "ca-app-pub-3940256099942544/5224354917"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[connection signal="energy_increase" from="Snake" to="." method="_on_Snake_energy_increase"]
[connection signal="game_over" from="Snake" to="." method="_on_Snake_game_over"]
[connection signal="score" from="Snake" to="." method="_on_Snake_score"]
[connection signal="energy_end" from="HUD" to="." method="_on_HUD_energy_end"]
[connection signal="restart" from="HUD" to="." method="_on_HUD_restart"]
[connection signal="interstitial_closed" from="AdMob" to="." method="_on_AdMob_interstitial_closed"]
[connection signal="interstitial_failed_to_load" from="AdMob" to="." method="_on_AdMob_interstitial_failed_to_load"]
[connection signal="interstitial_loaded" from="AdMob" to="." method="_on_AdMob_interstitial_loaded"]
